# deira

./: .gitignore  README.mkd  dockerfile  pyproject.toml
deira/currency/: database.py  dataset.py  main.py
deira/dags/: currency.py
deira/logs/scheduler/: latest
terraform/kind_cluster/: main.tf
terraform/kubeternetes/: main.tf  terraform.tfstate  terraform.tfstate.backup
tests/: test_deira.py
